--- a/bower.json
+++ b/bower.json
@@ -16,8 +16,7 @@
     "iron-selector": "PolymerElements/iron-selector#^1.0.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.0",
     "polymer": "Polymer/polymer#^1.6.0",
-    "iron-grid": "https://github.com/The5heepDev/iron-grid.git",
-    "iron-scroll-threshold": "PolymerElements/iron-scroll-threshold#1.0.3"
+    "iron-grid": "https://github.com/The5heepDev/iron-grid.git"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
