--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.0.0",
     "iron-grid": "https://github.com/The5heepDev/iron-grid.git",
     "iron-icon": "PolymerElements/iron-icon#^1.0.0",
+    "iron-icons": "PolymerElements/iron-icons#^1.2.0",
     "iron-iconset-svg": "PolymerElements/iron-iconset-svg#^1.0.0",
     "iron-localstorage": "PolymerElements/iron-localstorage#^1.0.0",
     "iron-media-query": "PolymerElements/iron-media-query#^1.0.0",
@@ -17,6 +18,8 @@
     "iron-selector": "PolymerElements/iron-selector#^1.0.0",
     "paper-dialog": "PolymerElements/paper-dialog#^1.1.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.0",
+    "paper-item": "PolymerElements/paper-item#^1.2.1",
+    "paper-menu": "PolymerElements/paper-menu#^1.2.2",
     "polymer": "Polymer/polymer#^1.6.0"
   },
   "devDependencies": {
