--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.0",
     "paper-item": "PolymerElements/paper-item#^1.2.1",
     "paper-menu": "PolymerElements/paper-menu#^1.2.2",
-    "polymer": "Polymer/polymer#^1.6.0"
+    "polymer": "Polymer/polymer#^1.6.0",
+    "vaadin-icons": "^2.0.0"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
