--- a/bower.json
+++ b/bower.json
@@ -17,8 +17,10 @@
     "iron-pages": "PolymerElements/iron-pages#^1.0.0",
     "iron-selector": "PolymerElements/iron-selector#^1.0.0",
     "paper-dialog": "PolymerElements/paper-dialog#^1.1.0",
+    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1.5.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.0",
     "paper-item": "PolymerElements/paper-item#^1.2.1",
+    "paper-listbox": "PolymerElements/paper-listbox#^1.1.2",
     "paper-menu": "PolymerElements/paper-menu#^1.2.2",
     "polymer": "Polymer/polymer#^1.6.0",
     "vaadin-icons": "^2.0.0"
