--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "paper-item": "PolymerElements/paper-item#^1.2.1",
     "paper-listbox": "PolymerElements/paper-listbox#^1.1.2",
     "paper-menu": "PolymerElements/paper-menu#^1.2.2",
+    "paper-spinner": "PolymerElements/paper-spinner#^1.2.1",
     "polymer": "Polymer/polymer#^1.6.0",
     "vaadin-icons": "^2.0.0"
   },
