--- a/bower.json
+++ b/bower.json
@@ -1,32 +1,21 @@
 {
-  "name": "polymer-starter-kit",
+  "name": "Hecmocer",
   "authors": [
-    "The Polymer Authors"
+    "Hector Moreno Cervera"
   ],
   "private": true,
   "dependencies": {
-    "app-layout": "PolymerElements/app-layout#^0.10.0",
-    "app-route": "PolymerElements/app-route#^0.9.0",
-    "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.0.0",
     "iron-grid": "https://github.com/The5heepDev/iron-grid.git",
     "iron-icon": "PolymerElements/iron-icon#^1.0.0",
     "iron-icons": "PolymerElements/iron-icons#^1.2.0",
-    "iron-iconset-svg": "PolymerElements/iron-iconset-svg#^1.0.0",
-    "iron-localstorage": "PolymerElements/iron-localstorage#^1.0.0",
     "iron-media-query": "PolymerElements/iron-media-query#^1.0.0",
-    "iron-pages": "PolymerElements/iron-pages#^1.0.0",
-    "iron-selector": "PolymerElements/iron-selector#^1.0.0",
     "paper-dialog": "PolymerElements/paper-dialog#^1.1.0",
     "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1.5.0",
-    "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.0",
     "paper-item": "PolymerElements/paper-item#^1.2.1",
     "paper-listbox": "PolymerElements/paper-listbox#^1.1.2",
     "paper-menu": "PolymerElements/paper-menu#^1.2.2",
     "paper-spinner": "PolymerElements/paper-spinner#^1.2.1",
     "polymer": "Polymer/polymer#^1.6.0",
     "vaadin-icons": "^2.0.0"
-  },
-  "devDependencies": {
-    "web-component-tester": "^4.0.0"
   }
 }
