refactor - simplify firebase.json

--- a/firebase.json
+++ b/firebase.json
@@ -1,19 +1,5 @@
 {
   "hosting": {
-    "public": "build/bundled",
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      },
-      {
-        "source": "!/__/**",
-        "destination": "/index.html"
-      },
-      {
-        "source": "**/!(*.js|*.html|*.css|*.json|*.svg|*.png|*.jpg|*.jpeg)",
-        "destination": "/index.html"
-      }
-    ]
+    "public": "build/bundled"
   }
 }
